<resources>
    <string name="app_name">TodayTODO</string>

    <string name="please_write_here">please, write here</string>
    <string name="edit_title">editing plan✏️</string>
    <string name="cancel">cancel</string>
    <string name="done">done</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="day">day</string>
    <string name="today_memo">Today\'s Memo</string>
    <string name="lastday_of_execution">Last day of execution</string>
    <string name="week_average">Week average</string>
    <string name="week_accumulation">Week accumulation</string>
    <string name="total_accumulation">Total accumulation</string>
    <string name="month_average">Month average</string>
    <string name="month_accumulation">Month accumulation</string>
    <string name="year_average">Year average</string>
    <string name="year_accumulation">Year accumulation</string>
    <string name="memo_icon" translatable="false">%1$s📌</string>
    <string name="setting">Setting</string>
    <string name="plan">Plan</string>
    <string name="plan_recommendation_keywords">Plan Recommendation Keywords</string>
    <string name="push_to_the_right">Push to the right</string>
    <string name="plus_minus">PlusMinus</string>
    <string name="calendar_in_basic_mode">Calendar in Basic Mode</string>
    <string name="font_style">Font style</string>
    <string name="alarm_at_10pm">Alarm at 10:00</string>
    <string name="app_info">App Info</string>
    <string name="app_version">App Version</string>
    <string name="font">Font</string>
    <string name="failed_to_download_font">Failed to download font\n check connect network</string>
    <string name="hangul">Hangul</string>
    <string name="english">English</string>
    <string name="support">Support</string>
    <string name="official_website">Official website</string>
    <string name="faq">FAQ</string>
    <string name="share_app_with_friends">Share app with friends</string>
    <string name="to_delete_all_data">To delete all data</string>
    <string name="plan_size">Plan size</string>
    <string name="empty" translatable="false"></string>
    <string name="the_plan_is_empty">The plan is Empty :(</string>
    <string name="tap_the_button_in_the_top_right_to_add_a_plan">Tap the ± button in the top right to add a plan</string>
    <string name="delete_memo_text">Are you sure you want to delete the recorded note?</string>
    <string name="repeat_alarm">Repeat Alarm</string>
    <string name="add_a_new_plan_from_the_planner">Add a new plan from the Planner</string>
    <string name="alarm">Alarm</string>
    <string name="add_new_alarm">Add New Alarm</string>
    <string name="every_monday">every monday</string>
    <string name="every_tuesday">every tuesday</string>
    <string name="every_wednesday">every wednesday</string>
    <string name="every_thursday">every thursday</string>
    <string name="every_friday">every friday</string>
    <string name="every_saturday">every saturday</string>
    <string name="every_sunday">every sunday</string>
    <string name="delete_alarm">Delete Alarm</string>
    <string name="alarm_name">Basic Alarm</string>
    <string name="click_me">Click Me!</string>
    <string name="click_here_to_add_a_plan">Click here to add a plan!</string>
    <string name="swipe_left_and_right_to_achieve_your_plan">Swipe left and right to achieve your plan!!</string>
    <string name="long_press_here_to_rearrange_plans">Long-press here to rearrange plans!!</string>
    <string name="want_to_quit_the_app">Want to quit the app?</string>

    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>

    <string name="travel">Travel✈️</string>
    <string name="beer">Beer🍺</string>
    <string name="date">Date💏</string>
    <string name="scalp_massage">Scalp massage💆🏻‍♀️</string>
    <string name="an_hour_of_game">an hour of game🎮</string>
    <string name="newspaper_editorial">newspaper editorial📰</string>
    <string name="walk">Walk🐕</string>
    <string name="haircut">Haircut✂️</string>
    <string name="nail_art">Nail Art😍</string>
    <string name="sanitary_day">Sanitary Day🤦🏻</string>
    <string name="cheating_day">Cheating Day🍖</string>
    <string name="writing_a_diary">Writing a diary✏️</string>
    <string name="pot_water">pot water🌻</string>
    <string name="stretching">Stretching🤸</string>
    <string name="riding_a_1km_bike">Riding a 1km bike🚴🏼</string>
    <string name="a_general_house_cleaning">a general house cleaning🧹</string>
    <string name="breakfast">breakfast🍌</string>
    <string name="yoga">Yoga🧘🏻‍♀️</string>
    <string name="an_hour_of_study">an hour of study📖</string>
    <string name="a_3km_run">a 3km run🏃</string>
    <string name="have_a_smoke">have a smoke🚬</string>
    <string name="instant_intake">instant intake🍔</string>
    <string name="multivitamin">multivitamin💊</string>
    <string name="miracle_morning">Miracle Morning😄</string>
    <string name="a_cup_of_water">a cup of water🥛</string>
    <string name="say_hello_to_my_parents">Say hello to My parents📞</string>
    <string name="blog_posting">Blog Posting💻</string>
    <string name="car_wash">car wash🔭</string>
    <string name="a_bowl_of_salad">a bowl of salad🥗</string>
    <string name="protein_intake">protein intake🧃</string>
    <string name="refueling">Refueling</string>
    <string name="quilt_burning">quilt-burning👋🏻</string>
    <string name="gas_bullet_checking">gas-bullet checking🔥</string>
    <string name="washroom">Washroom🚽</string>
    <string name="bible_reading">Bible reading📚</string>
    <string name="window_closing">window closing🕞</string>
    <string name="_20_squats">20 squats🏋🏻</string>
    <string name="chapter_reading">chapter reading📖</string>


</resources>