<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/calendar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guide_title_bottom"
        android:text="test"
        android:textSize="15sp"
        android:textColor="@color/black"
        />


    <!-- day of week -->
    <TextView
        android:id="@+id/monday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/guide_title_bottom"
        app:layout_constraintRight_toLeftOf="@id/tuesday"
        android:text="@string/monday"
        />

    <TextView
        android:id="@+id/tuesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/monday"
        app:layout_constraintTop_toTopOf="@id/guide_title_bottom"
        app:layout_constraintRight_toLeftOf="@id/wednesday"
        android:text="@string/tuesday"
        />

    <TextView
        android:id="@+id/wednesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/tuesday"
        app:layout_constraintTop_toTopOf="@id/guide_title_bottom"
        app:layout_constraintRight_toLeftOf="@id/thursday"
        android:text="@string/wednesday"
        />

    <TextView
        android:id="@+id/thursday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/wednesday"
        app:layout_constraintTop_toTopOf="@id/guide_title_bottom"
        app:layout_constraintRight_toLeftOf="@id/friday"
        android:text="@string/thursday"
        />

    <TextView
        android:id="@+id/friday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/thursday"
        app:layout_constraintTop_toTopOf="@id/guide_title_bottom"
        app:layout_constraintRight_toLeftOf="@id/saturday"
        android:text="@string/friday"
        />

    <TextView
        android:id="@+id/saturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/friday"
        app:layout_constraintTop_toTopOf="@id/guide_title_bottom"
        app:layout_constraintRight_toLeftOf="@id/sunday"
        android:text="@string/saturday"
        />

    <TextView
        android:id="@+id/sunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/saturday"
        app:layout_constraintTop_toTopOf="@id/guide_title_bottom"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/sunday"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendar_content_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/guide_list_top"
        app:layout_constraintBottom_toBottomOf="parent"
        />


    
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_title_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_list_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"
        />
</androidx.constraintlayout.widget.ConstraintLayout>