<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.example.todoplusminus.vm.PlanHistoryContentVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chart_view_list"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guide_top"
            android:layout_marginBottom="20dp"
            bind:setGraphViewXData="@{vm.XData}"
            bind:setGraphViewYData="@{vm.YData}"
            bind:setGraphViewTitle="@{vm.graphTitle}"
            bind:setGraphBarColor="@{vm.MGraphBarColor}"
            />


        <!-- summary_1-->
        <View
            android:id="@+id/devide_line_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chart_view_list"
            android:background="@color/right_gray"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:id="@+id/average_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/devide_line_2"
            android:text="@string/week_average"
            android:layout_marginTop="10dp"
            bind:font="@{vm.font}"
            />

        <TextView
            android:id="@+id/average_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/devide_line_2"
            android:text="@{vm.summaryAverage.toString()}"
            android:layout_marginTop="10dp"
            bind:font="@{vm.font}"
            />

        <!-- summary_3-->
        <View
            android:id="@+id/devide_line_3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/average_title"
            android:background="@color/right_gray"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/accumulate_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/devide_line_3"
            android:text="@string/week_accumulation"
            android:layout_marginTop="10dp"
            bind:font="@{vm.font}"
            />

        <TextView
            android:id="@+id/accumulate_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/devide_line_3"
            android:text="@{vm.summaryAccumulation.toString()}"
            android:layout_marginTop="10dp"
            bind:font="@{vm.font}"
            />

        <!-- summary_4-->
        <View
            android:id="@+id/devide_line_4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/accumulate_title"
            android:background="@color/right_gray"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/total_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/devide_line_4"
            android:text="@string/total_accumulation"
            android:layout_marginTop="10dp"
            bind:font="@{vm.font}"
            />

        <TextView
            android:id="@+id/total_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/devide_line_4"
            android:text="@{vm.totalAccumulation.toString()}"
            android:layout_marginTop="10dp"
            bind:font="@{vm.font}"
            />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>